add lives bonus and enhance spacing

--- a/themes/up-business-theme/layouts/cursos/single.html
+++ b/themes/up-business-theme/layouts/cursos/single.html
@@ -16,6 +16,7 @@
     {{ with .Site.Data.guardiao.curriculum }}{{ partial "sections/curriculum.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.teacher }}{{ partial "sections/portfolio.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.trailer }}{{ partial "sections/video.html" . }}{{ end }}
+    {{ with .Site.Data.guardiao.bonuslives }}{{ partial "sections/portfolio.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.objections }}{{ partial "sections/objections.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.offer }}{{ partial "sections/offer.html" . }}{{ end }}
