--- a/themes/up-business-theme/layouts/partials/sections/curriculum.html
+++ b/themes/up-business-theme/layouts/partials/sections/curriculum.html
@@ -1,4 +1,4 @@
-<section class="section cta py-5 bg-purple mb-5">
+<section class="section cta py-4 bg-purple">
   <div class="container text-black-61">
     <div class="row justify-content-center pb-5">
       <div class="col-12 col-xl-6">
