--- a/themes/up-business-theme/layouts/partials/sections/testimonials.html
+++ b/themes/up-business-theme/layouts/partials/sections/testimonials.html
@@ -1,6 +1,6 @@
-<section class="section testimonials py-5 bg-blue-16">
+<section class="section testimonials py-4 bg-blue-16">
   <div class="container">
-    <div class="row pb-5">
+    <div class="row py-4">
       <div class="col-12">
         {{ with .content.title }}
         <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
