--- a/themes/up-business-theme/layouts/partials/sections/video.html
+++ b/themes/up-business-theme/layouts/partials/sections/video.html
@@ -1,4 +1,4 @@
-<section class="section cta pb-5">
+<section class="section cta py-4">
     <div class="container">
         {{ with .content }}
         <div class="row justify-content-center pb-5">
