--- a/themes/up-business-theme/layouts/partials/sections/headline.html
+++ b/themes/up-business-theme/layouts/partials/sections/headline.html
@@ -1,9 +1,9 @@
-<section class="section hero pb-4">
+<section class="section hero py-4">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-6">
                 {{ with .content.title }}
-                <h3 class="hero-title fs-1 fw-bold text-center text-primary pb-3">{{ . | markdownify }}</h3>
+                <h3 class="hero-title fs-1 fw-bold text-center text-primary">{{ . | markdownify }}</h3>
                 {{ end }}
             </div>
         </div>
