--- a/themes/up-business-theme/layouts/partials/sections/hero-dark.html
+++ b/themes/up-business-theme/layouts/partials/sections/hero-dark.html
@@ -1,27 +1,27 @@
-<section class="section hero py-5  bg-purple">
-    <div class="container">
-      <div class="row flex-column flex-xl-row-reverse">
-        {{ with .content.image }}
-        <div class="col-12 col-xl-6 d-flex flex-column justify-content-center hero-image">
-          {{ partial "utilities/image-fluid" . }}
-        </div>
+<section class="section hero py-5 bg-purple">
+  <div class="container">
+    <div class="row flex-column flex-xl-row-reverse align-items-center">
+      {{ with .content.image }}
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center hero-image" style="max-width: 80%;">
+        {{ partial "utilities/image-fluid" . }}
+      </div>
+      {{ end }}
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center" style="margin-top: 25px;">
+        {{ with .content.title }}
+          <h3 class="hero-title fw-bold display-3 text-primary text-light text-center text-xl-start pb-4">{{ . | markdownify }}</h3>
         {{ end }}
-        <div class="col-12 col-xl-6 d-flex flex-column justify-content-center" style="margin-top: 25px;">
-          {{ with .content.title }}
-            <h3 class="hero-title fw-bold display-2 text-primary text-light text-center text-xl-start pb-4">{{ . | markdownify }}</h3>
+        {{ with .content.text }}
+          <p class="text-center text-black-61 text-light text-xl-start pb-4">{{ . | markdownify }}</p>
+        {{ end }}
+        <div class="d-flex flex-column flex-xl-row align-items-center justify-content-center">
+          {{ with .content.buttonPrimary }}
+            <a class="btn bg-green-grad text-light px-4 my-1 fw-bold fs-3" href="{{ .url }}">{{ .label }}</a>
           {{ end }}
-          {{ with .content.text }}
-            <p class="text-center text-black-61 text-light text-xl-start pb-4">{{ . | markdownify }}</p>
+          {{ with .content.buttonSecondary }}
+            <a class="btn btn-outline-primary px-4 my-1 ms-xl-4 fw-bold fs-3" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
           {{ end }}
-          <div class="d-flex flex-column flex-xl-row">
-            {{ with .content.buttonPrimary }}
-              <a class="btn bg-green-grad px-4 my-1 fw-bold text-light fs-3" href="{{ .url }}">{{ .label }}</a>
-            {{ end }}
-            {{ with .content.buttonSecondary }}
-              <a class="btn btn-outline-primary px-4 my-1 ms-xl-4 fw-bold" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
-            {{ end }}
-          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
