--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -1,4 +1,4 @@
-<section class="section hero cta portfolio pb-5" id="{{ .id }}">
+<section class="section hero cta portfolio py-4" id="{{ .id }}">
   <div class="container pt-5">
     <div class="row portfolio-feature">
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
