--- a/themes/up-business-theme/layouts/partials/sections/portfolio.html
+++ b/themes/up-business-theme/layouts/partials/sections/portfolio.html
@@ -1,7 +1,7 @@
 <section class="section portfolio">
   <div class="container">
     {{ range .content }}
-    <div class="row portfolio-feature">
+    <div class="row portfolio-feature py-4">
 
       <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
         {{ with .pretitle }}
@@ -15,12 +15,16 @@
         {{ end }}
         <div class="">
           {{ range .buttons }}
-            <a class="text-decoration-none me-3" href="{{ .url }}">{{ .label }}</a>
+            {{ if .url }}
+              <a class="text-decoration-none me-3" href="{{ .url }}">{{ .label }}</a>
+            {{ else }}
+              <span class="text-decoration-none me-3">{{ .label }}</span>
+            {{ end }}
           {{ end }}
         </div>
       </div>
 
-      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center pb-5">
+      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
         {{ with .image }}
           {{ partial "utilities/image-fluid.html" . }}
         {{ end }}
