--- a/themes/up-business-theme/layouts/partials/sections/triple-headline.html
+++ b/themes/up-business-theme/layouts/partials/sections/triple-headline.html
@@ -1,4 +1,4 @@
-<section class="section hero pb-5">
+<section class="section hero py-4">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-xl-8">
