--- a/themes/up-business-theme/layouts/partials/shared/footer.html
+++ b/themes/up-business-theme/layouts/partials/shared/footer.html
@@ -1,6 +1,6 @@
-<footer class="shared footer bg-blue-light py-5">
+<footer class="shared footer bg-blue-light py-4">
   <div class="container">
-    <div class="row pb-5">
+    <div class="row">
       <div class="col-12 col-xl-4 text-center text-xl-start pb-4">
         <h4 class="fw-semibold text-uppercase text-primary">{{ .Site.Title }}</h4>
         <p class="text-black-61">{{ .Site.Params.description }}</p>
