--- a/themes/up-business-theme/layouts/cursos/list.html
+++ b/themes/up-business-theme/layouts/cursos/list.html
@@ -6,12 +6,12 @@
     <section class="section blog-list py-5">
       <div class="container">
         <div class="row justify-content-center pb-5">
-          <div class="col-12 col-xl-6">
+          <div class="col-12 col-xl-12">
             {{ with .Title }}
               <h2 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h2>
             {{ end }}
-            {{ with .Params.description }}
-              <p class="text-black-61 text-center pb-3">{{ . }}</p>
+            {{ with .Description }}
+              <p class="fs-3 text-black-61 text-center pb-3">{{ . }}</p>
             {{ end }}
           </div>
         </div>
