allow guardiao page to be found by correct url

--- a/themes/up-business-theme/layouts/cursos/list.html
+++ b/themes/up-business-theme/layouts/cursos/list.html
@@ -15,7 +15,7 @@
             {{ end }}
           </div>
         </div>
-        <div class="row g-4 pb-5">
+        <!-- <div class="row g-4 pb-5">
           {{ range (.Paginate .RegularPages).Pages }}
           <div class="col-12 col-md-6 col-lg-4">
             <a class="card text-decoration-none h-100" href="{{ .Permalink }}">
@@ -37,7 +37,7 @@
         </div>
         <div class="row pb-5">
           {{ template "_internal/pagination.html" . }}
-        </div>
+        </div> -->
       </div>
     </section>
     {{- partial "shared/footer.html" . -}}
