fix services layout

--- a/themes/up-business-theme/layouts/guardiao-cripto/list.html
+++ b/themes/up-business-theme/layouts/guardiao-cripto/list.html
@@ -8,11 +8,11 @@
     {{ with .Site.Data.guardiao.protect }}{{ partial "sections/headline-description.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.dontlosemoney }}{{ partial "sections/headline.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.fiatvsbtc }}{{ partial "sections/portfolio.html" . }}{{ end }}
-    {{ with .Site.Data.guardiao.problems }}{{ partial "sections/services.html" . }}{{ end }}
+    {{ with .Site.Data.guardiao.problems }}{{ partial "sections/services-trios.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.solution }}{{ partial "sections/headline.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.hero2 }}{{ partial "sections/hero-dark.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.who }}{{ partial "sections/who.html" . }}{{ end }}
-    {{ with .Site.Data.guardiao.features }}{{ partial "sections/services.html" . }}{{ end }}
+    {{ with .Site.Data.guardiao.features }}{{ partial "sections/services-trios.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.isnot }}{{ partial "sections/triple-headline.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.curriculum }}{{ partial "sections/curriculum.html" . }}{{ end }}
     {{ with .Site.Data.guardiao.teacher }}{{ partial "sections/portfolio.html" . }}{{ end }}
