--- a/themes/up-business-theme/layouts/do-zero-as-criptomoedas/list.html
+++ b/themes/up-business-theme/layouts/do-zero-as-criptomoedas/list.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-{{ partial "head/head.html" . }}
-
-<body>
-    {{ with .Site.Data.dzac.heroevent }}{{ partial "sections/hero-event.html" . }}{{ end }}
-    {{ with .Site.Data.dzac.dontlosemoney }}{{ partial "sections/headline.html" . }}{{ end }}
-    {{ with .Site.Data.dzac.curriculum }}{{ partial "sections/portfolio.html" . }}{{ end }}
-    {{ with .Site.Data.dzac.protect }}{{ partial "sections/headline-description.html" . }}{{ end }}
-    {{ with .Site.Data.dzac.teacher }}{{ partial "sections/portfolio.html" . }}{{ end }}
-    {{ with .Site.Data.dzac.offer }}{{ partial "sections/offer-event.html" . }}{{ end }}
-    {{- partial "shared/footer.html" . -}}
-</body>
-
-</html>
+{{ define "main" }}
+{{ with .Site.Data.dzac.heroevent }}{{ partial "sections/hero-event.html" . }}{{ end }}
+{{ with .Site.Data.dzac.dontlosemoney }}{{ partial "sections/headline.html" . }}{{ end }}
+{{ with .Site.Data.dzac.curriculum }}{{ partial "sections/portfolio.html" . }}{{ end }}
+{{ with .Site.Data.dzac.protect }}{{ partial "sections/headline-description.html" . }}{{ end }}
+{{ with .Site.Data.dzac.teacher }}{{ partial "sections/portfolio.html" . }}{{ end }}
+{{ with .Site.Data.dzac.offer }}{{ partial "sections/offer-event.html" . }}{{ end }}
+{{ end }}
