--- a/themes/up-business-theme/layouts/partials/head/head.html
+++ b/themes/up-business-theme/layouts/partials/head/head.html
@@ -5,23 +5,32 @@
   <!-- Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{end}}" />
+  <meta name="description"
+    content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{end}}" />
 
   <!-- Favicons and Manifest -->
   {{ partial "head/_favicons.html" . }}
 
   <!-- SEO: Google Analytics -->
   {{ if hugo.IsProduction }}
-    {{ partial "head/_seo.html" . }}
-    <!-- Global site tag (gtag.js) - Google Ads: 10967398952 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10967398952"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  {{ partial "head/_seo.html" . }}
+  <!-- Event snippet for [DZAC] Enviar formulário de lead conversion page
+    In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+  <script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof (url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+        'send_to': 'AW-10967398952/BJ8qCLzZ9IIYEKj01O0o',
+        'event_callback': callback
+      });
+      return false;
+    }
+  </script>
 
-      gtag('config', 'AW-10967398952');
-    </script>
   {{ end }}
 
   <!-- Stylesheets and Javascript -->
@@ -29,6 +38,7 @@
 
   <!-- RSS -->
   {{ range .AlternativeOutputFormats -}}
-    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+  {{ printf `
+  <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
 </head>
