--- a/themes/up-business-theme/layouts/partials/sections/hero-event.html
+++ b/themes/up-business-theme/layouts/partials/sections/hero-event.html
@@ -48,7 +48,7 @@
                       <div class="row">
                         <div class="col-xs-12 d-flex align-items-center justify-content-center">
                           <input type="submit" value="QUERO PARTICIPAR" class="btn bg-green-grad text-light px-4 my-1 fw-bold fs-1"
-                            data-disable-with="QUERO PARTICIPAR" />
+                            data-disable-with="QUERO PARTICIPAR" onclick="gtag_report_conversion()"/>
                         </div>
                       </div>
                     </fieldset>
