--- a/themes/up-business-theme/layouts/partials/head/head.html
+++ b/themes/up-business-theme/layouts/partials/head/head.html
@@ -14,6 +14,17 @@
   <!-- SEO: Google Analytics -->
   {{ if hugo.IsProduction }}
   {{ partial "head/_seo.html" . }}
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10967398952"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-10967398952');
+  </script>
+
+
   <!-- Event snippet for [DZAC] Enviar formulário de lead conversion page
     In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
   <script>
