make offers void

--- a/themes/up-business-theme/layouts/partials/sections/hero-event.html
+++ b/themes/up-business-theme/layouts/partials/sections/hero-event.html
@@ -14,7 +14,7 @@
         <div class="d-flex flex-column flex-xl-row align-items-center justify-content-center bg-purple text-light pt-4">
 
           <!-- Generated from https://formkeep.com/forms/2c3123acefba/designer/edit on November 08, 2022 13:54 using version 2.03.21 -->
-          <div class="container">
+          <!-- <div class="container">
             <div class="row">
               <section class="container col-xs-12 col-sm-8 col-sm-offset-2 col-xl-10 col-xl-offset-3 my-4">
                 <div class="container" style="width:100%">
@@ -56,10 +56,10 @@
                 </div>
               </section>
             </div>
-          </div>
+          </div> -->
           <!-- Generated from https://formkeep.com/forms/2c3123acefba/designer/edit on November 08, 2022 13:54 using version 2.03.21 -->
 
-
+          <h4 class="hero-title fw-bold display-6 text-primary text-danger text-center text-xl-start">[MATRÍCULAS ENCERRADAS]</h4>
         </div>
       </div>
     </div>
