--- a/themes/up-business-theme/layouts/partials/sections/offer.html
+++ b/themes/up-business-theme/layouts/partials/sections/offer.html
@@ -44,10 +44,12 @@
           <div class="row justify-content-center">
             <div class="col-12 col-xl-12 text-center">
               {{ with .content.button }}
-              <a class="btn btn-primary bg-green-grad text-light px-3 my-1 fw-bold fs-1"
+              <!-- <a class="btn btn-primary bg-green-grad text-light px-3 my-1 fw-bold fs-1"
                 style="display: inline-flex; align-items: center;" href="{{ .url }}">
                 {{ .label }}
-              </a>
+              </a> -->
+              <h4 class="hero-title fw-bold display-6 text-primary text-danger text-center text-xl-start"
+              style="display: inline-flex; align-items: center;">[MATRÍCULAS ENCERRADAS]</h4>
               {{ end }}
               <div class="row justify-content-center">
                 <div class="col-12 col-xl-10 text-center">
