Add Hotmart disclaimer to course

--- a/themes/up-business-theme/layouts/guardiao-cripto/list.html
+++ b/themes/up-business-theme/layouts/guardiao-cripto/list.html
@@ -19,4 +19,5 @@
 {{ with .Site.Data.guardiao.offer }}{{ partial "sections/offer.html" . }}{{ end }}
 {{ with .Site.Data.guardiao.warranty }}{{ partial "sections/portfolio.html" . }}{{ end }}
 {{ with .Site.Data.guardiao.faq }}{{ partial "sections/faq.html" . }}{{ end }}
+{{ with .Site.Data.guardiao.disclaimer }}{{ partial "sections/disclaimer.html" . }}{{ end }}
 {{ end }}
